--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,7 +17,7 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with
 bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 # forget the find window.  That is for chumps
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
-
+bind-key -r i run-shell "tmux neww tmux-cht.sh"
 
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode after dragging with mouse
 
