feat: Switch to catppuccin and enable italics support

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,7 @@
 #set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",screen-256color*:Tc"
 set-option -g default-terminal "screen-256color"
+set -g default-terminal "tmux"
 
 
 set-window-option -g visual-bell on
@@ -30,7 +31,8 @@ set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for 
 set -g @plugin 'lawabidingcactus/tmux-gruvbox-truecolor'
 
 
-set -g @tmux-gruvbox 'dark' # or 'light'
+# set -g @tmux-gruvbox 'dark' # or 'light'
+set -g @plugin 'catppuccin/tmux'
 
 set -g @resurrect-capture-pane-contents 'on' # allow tmux-ressurect to capture pane contents
 set -g @continuum-restore 'on' # enable tmux-continuum functionality
