--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,7 @@
 #set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",screen-256color*:Tc"
 set-option -g default-terminal "screen-256color"
+set -g base-index 1 
 set -g default-terminal "tmux"
 
 
@@ -26,6 +27,8 @@ unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode after dragging w
 set -g @plugin 'tmux-plugins/tpm'
 
 # list of tmux plugins
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 set -g @plugin 'lawabidingcactus/tmux-gruvbox-truecolor'
@@ -34,8 +37,8 @@ set -g @plugin 'lawabidingcactus/tmux-gruvbox-truecolor'
 # set -g @tmux-gruvbox 'dark' # or 'light'
 set -g @plugin 'catppuccin/tmux'
 
-set -g @resurrect-capture-pane-contents 'on' # allow tmux-ressurect to capture pane contents
-set -g @continuum-restore 'on' # enable tmux-continuum functionality
+set -g @continuum-restore 'on'
+set -g @resurrect-strategy-nvim 'session'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
