feat: change leader ss to only symbols in file

--- a/jetbrains/.ideavimrc
+++ b/jetbrains/.ideavimrc
@@ -180,7 +180,8 @@ nmap <leader>a <Action>(GotoAction)
 nmap ga <Action>(GotoAction)
 nmap <leader>sc <Action>(GotoClass)
 nmap <leader><leader> <Action>(GotoFile)
-nmap <leader>ss <Action>(GotoSymbol)
+"nmap <leader>ss <Action>(GotoSymbol) // this does all files - FileStructurePopup is more convenient for me
+nmap <leader>ss <Action>(FileStructurePopup)
 nmap <leader>st <Action>(GoToTest)
 nmap <leader>/ <Action>(TextSearchAction)
 nmap go <Action>(GotoSuperMethod)
