--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,9 @@
-#set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",screen-256color*:Tc"
-set-option -g default-terminal "screen-256color"
+
+set -g default-terminal "tmux-256color"
+
+set-option -a terminal-features 'xterm-256color:RGB'
+set-option -a terminal-overrides 'xterm-256color:RGB'
 set -g base-index 1 
-set -g default-terminal "tmux"
 
 
 set-window-option -g visual-bell on
@@ -31,11 +32,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
-set -g @plugin 'lawabidingcactus/tmux-gruvbox-truecolor'
 
-
-# set -g @tmux-gruvbox 'dark' # or 'light'
-set -g @plugin 'catppuccin/tmux'
+run ~/.tmux/plugins/catppuccin/tmux/catppuccin.tmux
+set -g @catppuccin_flavor 'mocha'
 
 set -g @continuum-restore 'on'
 set -g @resurrect-strategy-nvim 'session'
